--- a/css/basic.css
+++ b/css/basic.css
@@ -1,15 +1,25 @@
 @charset "UTF-8";
 body {
+    width:100%;
+    min-width: 360px;
+}
+.contbody_scroll{
+    overflow: hidden;
 }
 
 /* 레이아웃 */
 #wrap {
+    position: relative;
+    width:100%; height: 100%;
 }
 header {
     height: 45px;
     background-color: #33353f;
 }
 #con_wrap {
+
+}
+.main_wrap{
     display: flex;
     flex-direction: column;
 }
@@ -42,6 +52,17 @@ header {
     flex: 1;
 }
 
+.cover{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0,0.7);
+    z-index: 10;
+}
+
 /* header */
 header {
     padding: 0 45px;
@@ -51,6 +72,7 @@ header {
     float: left;
     position: relative;
     left: -45px;
+    z-index: 20;
 }
 .logo {
     float: left;
@@ -69,10 +91,10 @@ header img {
 }
 
 /*content */
-#con_wrap {
+.main_wrap {
     padding: 6px;
 }
-#con_wrap section {
+.main_wrap section {
     display: table;
 }
 section > a {
@@ -207,10 +229,11 @@ ul.quickmenu {
 #lnb {
     position: fixed;
     top: 0;
-    left: 0;
+    left: -274px;
     width: 274px;
     height: 100%;
     background-color: #f1f1f1;
+    z-index: 100;
 }
 .lnb_login {
     background-color: #111;
@@ -228,6 +251,7 @@ ul.quickmenu {
 }
 
 ul.lnb_list {
+    border-bottom: 1px solid #ddd;
 }
 .lnb_list li {
 }
